--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "api"
   ],
   "require": {
-    "illuminate/support": "~7|~8",
+    "illuminate/support": "~7|~8|~9",
     "rossity/php-quickbase": "^0.2"
   },
   "require-dev": {
