--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "rossity/laravel-quickbase",
+  "name": "dxc04/laravel-quickbase",
   "description": "A wrapper around rossity/php-quickbase for Laravel.",
   "license": "MIT",
   "authors": [
