--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,18 @@
   ],
   "require": {
     "illuminate/support": "~7|~8|~9",
-    "rossity/php-quickbase": "^0.2"
+    "dxc04/php-quickbase": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~9.0",
     "orchestra/testbench": "~5|~6"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/dxc04/php-quickbase.git"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "Rossity\\LaravelQuickbase\\": "src/"
