--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   ],
   "require": {
     "illuminate/support": "~7|~8|~9",
-    "dxc04/php-quickbase": "dev-master"
+    "dxc04/php-quickbase": "@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "~9.0",
